# dreamail

./: LICENSE  README.md  dreamail.cabal
app/: Main.hs
examples/: hello.dml  hello.drl
src/: AST.hs  Compile.hs  Parse.hs  Semantics.hs  Tokens.hs  Translate.hs  Utils.hs
