name:                dreamail
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/dreamail#readme
license:             BSD3
license-file:        LICENSE
author:              Rogan Murley
maintainer:          rogan@roganmurley.com
copyright:           2016 Rogan Murley
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:       AST
                       , Parse
                       , Semantics
                       , Tokens
                       , Translate
  build-depends:       base >= 4.7 && < 5
                       , blaze-html
                       , blaze-markup
                       , indents
                       , mtl
                       , parsec
  default-language:    Haskell2010

executable dreamail-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , blaze-html
                     , either
                     , parsec
                     , dreamail
  default-language:    Haskell2010

test-suite dreamail-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dreamail
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/dreamail
